# CD-playground

./: .pre-commit-config.yaml  .release-please-manifest.json  mise.toml  release-please-config.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-test.yaml  docker-backend.yaml  e2e-test.yaml  frontend-test.yaml
kubernetes/: pyproject.toml  setup_minimal_cluster_local
scripts/: setup  setup_project  setup_project_sh
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: __init__.py  config.py  main.py  models.py  storage.py
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: __init__.py  main.py
src/frontend/src/frontend/templates/: base.html  index.html
src/frontend/tests/: conftest.py
