[project]
name = "backend"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kuba" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
cd-playground-backend = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
    "pytest-cov>=6.2.1",
]
