[project]
name = "frontend"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kuba" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.4",
]

[project.scripts]
cd-playground-frontend = "frontend.main:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
